Add simple page

--- a/jsru/simple.html
+++ b/jsru/simple.html
@@ -6,15 +6,7 @@
 </head>
 
 <body>
-  
-  <script>
-function ucFirst(str) {
-    if (!str) return str;
-     
-    return str[0].toUpperCase() + str.slice(1);
-    alert("крокозяблик")
-    }
-    </script>
+  <h1>Hello there!</h1>
 </body>
 
 </html>
